fix: Align UIs

--- a/src/components/standalones/AudioFieldset/AudioFieldset.css
+++ b/src/components/standalones/AudioFieldset/AudioFieldset.css
@@ -27,6 +27,6 @@
   justify-content: space-between;
   -webkit-align-items: center;
   align-items: center;
-  margin: 0 auto 12px;
+  margin: 0 auto;
   width: var(--fieldset-width);
 }
